refractoring Helper to util; refractoring Config to config.UserConfig; reorder some code for better readability